# dedicatedslave

./: .gitignore  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  PENDING.md  README.md  config.json  database.db  database.db-journal  dub.json  meson.build
docs/: index.md
docs/about/: release-notes.md  support.md
docs/developer-guide/: contributing.md  development.md
docs/diagrams/: classdiagram.graphml  classdiagram.iuml  classdiagram.puml  flowdiagram.graphml
docs/user-guide/: configuration.md  gettingstarted.md
src/: example.d  example2.d  example3.d  meson.build
src/cli/: dub.json
src/gui/: dub.json  meson.build
src/gui/data/gsettings/: com.enthdev.DedicatedSlave.gschema.xml
src/gui/source/: app.d
src/gui/source/dedicatedslave/gui/: actions.d  app.d  appmenubar.d  appstatusbar.d  apptoolbar.d  appwindow.d  common.d  constants.d  helper.d  loader.d  mainwindow.d  menubar.d  preferences.d  settings.d  settingswindow.d  splash.d  splashwindow.d  statusbar.d  toolbar.d
src/gui/source/dedicatedslave/gui/containers/: console.d  list.d  notebook.d
src/gui/source/dedicatedslave/gui/gtk/: dialog.d  settings.d  util.d
src/gui/source/dedicatedslave/gui/i18n/: l10n.d
src/gui/source/dedicatedslave/gui/instance/: instmenubar.d  instnotebook.d  inststatusbar.d  insttoolbar.d  instwindow.d
src/gui/source/dedicatedslave/gui/prefs/: advdialog.d  commond.d  settingseditor.d  settingswindow.d
src/gui/source/dedicatedslave/gui/util/: array.d  string.d
src/gui/source/dedicatedslave/gui/windows/: console.d  list.d  notebook.d
src/source/dedicatedslave/: api.d  config.d  loader.d  logger.d  package.d  processmngr.d  steamapi.d
src/source/dedicatedslave/data/: data.d  database.d  models.d
src/source/dedicatedslave/models/: gameinstances.d
